--- a/app/src/main/res/layout/activity_pictionary.xml
+++ b/app/src/main/res/layout/activity_pictionary.xml
@@ -15,9 +15,9 @@
         android:id="@+id/timer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:text="Tiempo :"
+        android:text="@string/tiempo"
         android:textColor="@color/black"
         android:textSize="@dimen/textApp" />
 
@@ -27,7 +27,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
-        android:layout_toRightOf="@+id/timer"
+        android:layout_toEndOf="@+id/timer"
         android:text="@string/timer"
         android:textColor="@android:color/black"
         android:textSize="@dimen/textApp" />
@@ -37,9 +37,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/rso"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:text="Aciertos :"
+        android:text="@string/aciertos"
         android:textColor="@color/black"
         android:textSize="@dimen/textApp" />
 
@@ -96,10 +96,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txtClicks"
-        android:layout_marginLeft="30dp"
         android:layout_marginStart="20dp"
         android:layout_toEndOf="@+id/aciertos"
-        android:text="0"
+        android:text="@string/_0"
         android:textColor="@color/black"
         android:textSize="@dimen/textApp" />
 
@@ -116,8 +115,8 @@
             android:id="@+id/correcto"
             android:layout_width="75dp"
             android:layout_height="75dp"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="45dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="45dp"
             android:background="@drawable/good"
             android:onClick="onClickSi" />
 
@@ -125,8 +124,8 @@
             android:id="@+id/fallo"
             android:layout_width="75dp"
             android:layout_height="75dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="45dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="45dp"
             android:background="@drawable/bad"
             android:onClick="onClickNo" />
     </RelativeLayout>
